# iconator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: error.rs  lib.rs  main.rs
