[package]
name = "iconator"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
fst = "0.4.7"
http = "1.4.2"
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[build-dependencies]
fst = "0.4.7"

[dev-dependencies]
tower = "0.5"
